# docs/v1/swagger.yaml
@@ -1,4 +1,160 @@
+definitions:
+  dto.DebtCategoryResponse:
+    properties:
+      id:
+        type: string
+      name:
+        type: string
+    type: object
+  dto.DebtRequest:
+    properties:
+      amount:
+        type: number
+      category_id:
+        type: string
+      due_date:
+        type: string
+      purchase_date:
+        type: string
+      status:
+        enum:
+        - pending
+        - paid
+        - canceled
+        type: string
+      title:
+        type: string
+    required:
+    - status
+    type: object
+  dto.DebtResponse:
+    properties:
+      amount:
+        type: number
+      category:
+        $ref: '#/definitions/dto.DebtCategoryResponse'
+      created_at:
+        type: string
+      due_date:
+        type: string
+      id:
+        type: string
+      purchase_date:
+        type: string
+      status:
+        type: string
+      title:
+        type: string
+      updated_at:
+        type: string
+    type: object
 info:
   contact: {}
-paths: {}
+paths:
+  /v1/debts:
+    get:
+      consumes:
+      - application/json
+      description: Lista todas as dívidas aplicando filtros e paginação
+      parameters:
+      - collectionFormat: csv
+        description: Filtrar por status
+        in: query
+        items:
+          type: string
+        name: status
+        type: array
+      - collectionFormat: csv
+        description: Filtrar por categorias
+        in: query
+        items:
+          type: string
+        name: category_id
+        type: array
+      - description: Valor mínimo
+        in: query
+        name: min_amount
+        type: number
+      - description: Valor máximo
+        in: query
+        name: max_amount
+        type: number
+      - description: Data inicial
+        in: query
+        name: start_date
+        type: string
+      - description: Data final
+        in: query
+        name: end_date
+        type: string
+      - description: Número da página
+        in: query
+        name: page
+        type: integer
+      - description: Limite por página
+        in: query
+        name: limit
+        type: integer
+      - description: Campo de ordenação
+        in: query
+        name: order_by
+        type: string
+      - description: Ordem (asc, desc)
+        in: query
+        name: order
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            items:
+              $ref: '#/definitions/dto.DebtResponse'
+            type: array
+      summary: Lista dívidas com filtros e paginação
+      tags:
+      - Dívidas
+    post:
+      consumes:
+      - application/json
+      description: Cria uma nova dívida com os dados fornecidos no corpo da requisição
+      parameters:
+      - description: Dados da dívida
+        in: body
+        name: request
+        required: true
+        schema:
+          $ref: '#/definitions/dto.DebtRequest'
+      produces:
+      - application/json
+      responses:
+        "201":
+          description: Created
+          schema:
+            $ref: '#/definitions/dto.DebtResponse'
+      summary: Cria uma nova dívida
+      tags:
+      - Dívidas
+  /v1/debts/{id}:
+    get:
+      consumes:
+      - application/json
+      description: Retorna os dados de uma dívida com base no ID fornecido
+      parameters:
+      - description: ID da dívida
+        in: path
+        name: id
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/dto.DebtResponse'
+      summary: Busca uma dívida por ID
+      tags:
+      - Dívidas
 swagger: "2.0"
